--- a/hosting/src/App.css
+++ b/hosting/src/App.css
@@ -46,7 +46,7 @@ html, body, #root, .App {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .whole-page{
@@ -72,23 +72,25 @@ html, body, #root, .App {
 }
 
 .apts-container{
-  height: 60%;
+  height: 40%;
 }
 
 .apts-content{
   border: 1px solid black;
   border-radius: 10px;
-  height: 100%;
+  height: 40vh;
   width: 85%;
 }
 
 .users-container{
   width: 70vw;
+  margin-top: 50px;
 }
 
 .user-container{
   text-align: right;
   margin: 5px;
+  padding-right: 50px;
 
 }
 
@@ -99,6 +101,7 @@ html, body, #root, .App {
   width:100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.6);
+  opacity: .8;
 }
 
 .modal-main {
@@ -117,4 +120,10 @@ html, body, #root, .App {
 
 .display-none {
   display: none;
+}
+
+.new-apt-container{
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
 }
