--- a/hosting/src/App.css
+++ b/hosting/src/App.css
@@ -2,6 +2,7 @@ html body{
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
+  font-size: 15pt;
 }
 
 html, body, #root, .App {
@@ -46,7 +47,10 @@ html, body, #root, .App {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+}
+
+.justify-center{
+  justify-content: center;
 }
 
 .whole-page{
@@ -73,17 +77,18 @@ html, body, #root, .App {
 
 .apts-container{
   height: 40%;
+  margin-top: 20px;
 }
 
 .apts-content{
-  border: 1px solid black;
+  border: 1px solid rgb(19, 83, 179);
   border-radius: 10px;
   height: 40vh;
   width: 85%;
 }
 
 .users-container{
-  width: 70vw;
+  width: auto;
   margin-top: 50px;
 }
 
@@ -100,11 +105,13 @@ html, body, #root, .App {
   left: 0;
   width:100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.6);
-  opacity: .8;
+  background: rgba(194, 191, 191, 0.6);
 }
 
 .modal-main {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   position:fixed;
   background: rgb(250, 249, 249);
   width: 80%;
